<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg_color">

    <ImageView
        android:id="@+id/bgpulau"
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_app_tiga"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/indo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indonesia"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:textSize="14sp"
        android:textColor="#fff"/>
    <TextView
        android:id="@+id/pulauseribu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/indo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/btnplay"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/pulauseribu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/description"
        android:textColor="#9B9797"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/bgpulau" />

    <TextView
        android:id="@+id/pertama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lineHeight="32dp"
        android:text="@string/first"
        android:textColor="#fff"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/description"/>

    <TextView
        android:id="@+id/kedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lineHeight="32dp"
        android:text="@string/second"
        android:textColor="#fff"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/pertama" />

    <ImageView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:src="@drawable/btnbuy"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kedua"/>

</androidx.constraintlayout.widget.ConstraintLayout>